# ebook2audiobook

./: .bh.ps1  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  README.ru.md  VERSION.txt  app.py  detect_gpus.py  docker-compose.yml  docker_build.sh  e2a.cmd  ebook2audiobook.cmd  ebook2audiobook.command  ebook2audiobook.sh  finetune_piper_deathpuss.sh  install_ebook2audiobook_windows.lnk  podman-compose.yml  pyproject.toml  requirements.txt  setup.py  uninstall.cmd  uninstall.command  uninstall.sh  uninstall_ebook2audiobook_linux_macos  uninstall_ebook2audiobook_windows.lnk
.github/: FUNDING.yml  languages.yml
.github/ISSUE_TEMPLATE/: CPU_Bug_Report.md  Feature_Request.md  GPU_Bug_Report.md
.github/workflows/: Docker-Build.yml  E2A-Test.yml  Readme-i18n.yml  Update-E2A-Voices.yml  Validate-Package-Metadata.yml  custom-command.yml  stale.yml  update-huggingface-space.yml
Notebooks/: colab_auralis_ebook2audiobook.ipynb  colab_ebook2audiobook.ipynb  kaggle-ebook2audiobook.ipynb
components/: register_package.py  sitecustomize.py
components/E2A-SML/: Dockerfile  README.md  requirements.txt  web_gui.py
components/E2A-SML/booknlp/english/: bert_qa.py  entity_tagger.py  gender_inference_model_1.py  litbank_coref.py  speaker_attribution.py
components/E2A-SML/sml_extractor/: __init__.py  core.py  sml_generator.py  voice_matcher.py
components/Universal_TTS_Finetune/: docker-compose.yml  export_checkpoint.py  finetune.sh  requirements.txt  web_gui.py
components/Universal_TTS_Finetune/piper/piper_train/: __main__.py  export_onnx.py
components/Universal_TTS_Finetune/recipes/ljspeech/align_tts/: train_aligntts.py
components/Universal_TTS_Finetune/recipes/ljspeech/vits_tts/: train_vits.py
components/Universal_TTS_Finetune/recipes/ljspeech/xtts_v1/: train_gpt_xtts.py
components/Universal_TTS_Finetune/utils/: gpt_train.py
components/audiocraft/: Dockerfile  docker-compose.yml  requirements.txt
dockerfiles/: HuggingfaceDockerfile
ebook2audiobook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ext/py/demucs/demucs.egg-info/: PKG-INFO
ext/py/num2words/num2words.egg-info/: PKG-INFO
lib/: __init__.py  conf.py  conf_lang.py  conf_models.py  core.py  functions.py  gradio.py  lang.py  models.py  utils.py
lib/classes/: argos_translator.py  arm64_dependency_resolver.py  audiobookshelf.py  background_detector.py  device_installer.py  non_text_filter.py  progress_handler.py  redirect_console.py  std_filter.py  stderr_filter.py  subprocess_pipe.py  subprocess_thread.py  tts_manager.py  tts_registry.py  voice_extractor.py  vram_detector.py
lib/classes/tts_engines/: .template.py  __init__.py  bark.py  coqui.py  fairseq.py  glowtts.py  piper.py  tacotron.py  tortoise.py  vits.py  xtts.py  yourtts.py
lib/classes/tts_engines/common/: audio.py  audio_filters.py  headers.py  preset_loader.py  utils.py
lib/classes/tts_engines/presets/: bark_presets.py  fairseq_presets.py  glowtts_presets.py  piper_presets.py  tacotron_presets.py  tortoise_presets.py  vits_presets.py  xtts_presets.py  yourtts_presets.py
readme/: README_ara.md  README_ben.md  README_ces.md  README_deu.md  README_fas.md  README_fra.md  README_hin.md  README_hrv.md  README_hun.md  README_ind.md  README_ita.md  README_jpn.md  README_kor.md  README_nld.md  README_pol.md  README_por.md  README_rus.md  README_slk.md  README_spa.md  README_swa.md  README_swe.md  README_tur.md  README_vie.md  README_yor.md  README_zho.md
tools/: detect_gpus.py
tools/E2A-SML/: Dockerfile  README.md  cli.py  docker-compose.yml  web_gui.py
tools/E2A-SML/booknlp/english/: english_booknlp.py
tools/Universal_TTS_Finetune/: .gitignore  Dockerfile  README.md  docker-compose.yml  headless_cli.py  requirements.txt  test_speaker.py  web_gui.py
tools/Universal_TTS_Finetune/notebook/: universal_tts_finetune_webui.ipynb
tools/Universal_TTS_Finetune/piper/piper_train/: filter_utterances.py  preprocess.py  select_speaker.py
tools/Universal_TTS_Finetune/piper/piper_train/vits/: lightning.py
tools/Universal_TTS_Finetune/recipes/ljspeech/delightful_tts/: train_delightful_tts.py
tools/Universal_TTS_Finetune/recipes/ljspeech/fast_pitch/: train_fast_pitch.py
tools/Universal_TTS_Finetune/recipes/ljspeech/fast_speech/: train_fast_speech.py
tools/Universal_TTS_Finetune/recipes/ljspeech/fastspeech2/: train_fastspeech2.py
tools/Universal_TTS_Finetune/recipes/ljspeech/glow_tts/: train_glowtts.py
tools/Universal_TTS_Finetune/recipes/ljspeech/neuralhmm_tts/: train_neuralhmmtts.py
tools/Universal_TTS_Finetune/recipes/ljspeech/overflow/: train_overflow.py
tools/Universal_TTS_Finetune/utils/: model_registry.py  pipeline.py  piper_utils.py
tools/icons/: generate-icons.py
tools/icons/mac/: appIcon.icns
tools/readme_i18n/: cache.json  update_translations.py
tools/workflow-testing/: hun-test.txt  sml-test.txt  spa_long_test.txt
(+8 files in other folders)
