[build-system]
name = "ebook2audiobook"
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ebook2audiobook"
version = {file = "VERSION.txt"}

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}

[project]
name = "ebook2audiobook"
description = "Convert eBooks to audiobooks with chapters and metadata"
authors = [
    { name = "Drew Thomasson" }
]
dependencies = [
    "cryptography",
    "py-cpuinfo",
    "tqdm",
    "torchvggish",
    "regex",
    "docker",
    "ebooklib",
    "python-pptx",
    "python-docx",
    "fastapi",
    "hf_xet",
    "beautifulsoup4",
    "nagisa",
    "pymupdf",
    "pymupdf-layout",
    "pytesseract",
    "unidic",
    "hangul-romanize",
    "iso639-lang",
    "soynlp",
    "jieba",
    "pycantonese",
    "pypinyin",
    "pythainlp",
    "mutagen",
    "PyOpenGL",
    "phonemizer-fork",
    "pydub",
    "unidecode",
    "langdetect",
    "phonemizer",
    "indic-nlp-library",
    "stanza==1.10.1",
    "argostranslate==1.11.0",
    "pandas>=1.0,<3.0",
    "gradio==5.49.1",
    "pyannote-audio==3.4.0; python_version < '3.12'",
    "pyannote-audio>=4.0.0; python_version >= '3.12'",
    "huggingface_hub>=0.36.2,<1.0; python_version < '3.12'",
    "huggingface_hub>=1.0; python_version >= '3.12'",
    "transformers==4.57.6; python_version < '3.12'",
    "transformers>=5.0.0; python_version >= '3.12'",
    "coqui-tts[languages]==0.27.5"
]
readme = "README.md"
requires-python = ">3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
scripts = { "ebook2audiobook" = "app:main" }

[project.urls]
"Homepage" = "https://github.com/DrewThomasson/ebook2audiobook"
