[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook2audiobook"
dynamic = ["version", "dependencies"]
description = "Convert eBooks to audiobooks with chapters and metadata"
authors = [
    { name = "Drew Thomasson" }
]
readme = "README.md"
requires-python = ">3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
scripts = { "ebook2audiobook" = "app:main" }

[project.urls]
"Homepage" = "https://github.com/DrewThomasson/ebook2audiobook"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}
